# Harmony-single-cell-calcium-analysis

./: .gitignore  OLD_scOscillations.ipynb  README.md  decay_fit.py  peak_analysis.py  pyproject.toml  requirements.txt  signal_preprocessing.py
notebooks/: baseline_plate_mad_sigma.txt  peak_analysis_MTca_preprocessed.ipynb  scOscillations.ipynb  synthesise_timeseries_test.ipynb
python/calcium_analysis/: __main__.py  fitting.py  helpers.py  multiindex_decorators.py  peaks.py  plot.py  smoothing.py
test_data/peaks/: golden_fit_results_multiindex.xlsx  golden_peak_timeseries.xlsx  golden_peaks.xlsx  golden_peaks_multiindex.xlsx  golden_signal.xlsx  golden_signal_multiindex.xlsx
tests/: conftest.py  test_fit.py  test_peaks.py  test_peaks_multiindex.py
